# elastic-rdma-drivers

./: .gitmodules  README.md
kernel/: .gitignore  CMakeLists.txt  README.md  RELEASENOTES.md  build.sh
kernel/conf/: configure-dkms.sh  dkms.conf  erdma-modprobe.conf  erdma.conf
kernel/config/: Makefile  compile_conftest.sh  erdma.cmake
kernel/debian/: changelog  control  copyright  erdma.postinst  erdma.prerm  rules
kernel/rpm/: Makefile  erdma.spec
kernel/src/: CMakeLists.txt  Kbuild.in  erdma-abi.h  erdma.h  erdma_cm.c  erdma_cm.h  erdma_cmd.c  erdma_cmdq.c  erdma_compat.c  erdma_compat.h  erdma_cq.c  erdma_debug.h  erdma_debugfs.c  erdma_eq.c  erdma_gdr.c  erdma_hw.h  erdma_ioctl.c  erdma_ioctl.h  erdma_main.c  erdma_p2p.c  erdma_p2p.h  erdma_qp.c  erdma_stats.c  erdma_stats.h  erdma_verbs.c  erdma_verbs.h  kcompat.h  ofa.mk
kernel/src/compat/: rdma_user_sw.h  sw.h  sw_av.c  sw_comp.c  sw_cq.c  sw_dev.c  sw_hdr.h  sw_hw_counters.h  sw_icrc.c  sw_loc.h  sw_mcast.c  sw_mr.c  sw_net.c  sw_net.h  sw_opcode.c  sw_opcode.h  sw_param.h  sw_pool.c  sw_pool.h  sw_qp.c  sw_queue.c  sw_queue.h  sw_recv.c  sw_req.c  sw_resp.c  sw_task.c  sw_task.h  sw_verbs.c  sw_verbs.h
scripts/: patch_apply.sh
scripts/patches/: 0001-RDMA-CORE-erdma-Add-userspace-verbs-related-header-f.patch  0001-providers-erdma-Refactor-create_qp-destroy_qp-implem.patch  0002-RDMA-CORE-erdma-Add-userspace-verbs-implementation.patch  0002-providers-erdma-Add-fork-support.patch  0003-RDMA-CORE-erdma-Add-the-main-module-of-the-provider.patch  0003-kernel-headers-Update-kernel-headers-to-unkown.patch  0007-providers-erdma-Fix-typo.patch  (+13 more)
